Fix horizontal overflow on menu page
Fixed horizontal overflow on menu page by
changing banner div width from 100vw to 100%.

--- a/public_html/static/css/master.css
+++ b/public_html/static/css/master.css
@@ -4,7 +4,7 @@ body {
 
 .banner {
     height: 128px;
-    width: 100vw;
+    width: 100%;
     background-image: url("../media/images/banner.png");
     background-repeat: no-repeat;
     background-size: contain;
